Arnwald Ost->Huegel: fix AT
refs #260

--- a/mod/area/area015.git.yml
+++ b/mod/area/area015.git.yml
@@ -2268,8 +2268,8 @@ TriggerList:
         PointZ: {type: :float, value: 0.0272000003606081}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: arnwald_osteingangtoarnwald26}
-    LinkedToFlags: {type: :byte, value: 1}
+    LinkedTo: {type: :cexostr, value: WP_arnwald_osteingangtoarnwald26}
+    LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
       type: :cexolocstr
@@ -2614,3 +2614,28 @@ WaypointList:
     YOrientation: {type: :float, value: 0.0245}
     YPosition: {type: :float, value: 54.4142}
     ZPosition: {type: :float, value: 0.01}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_arnwald26toarnwald_osteingang}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 118.9035}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 54.4142}
+    ZPosition: {type: :float, value: 0.0261}
