Huegel: remove area coords from names
refs #260

--- a/mod/area/huegel_n01_o03.are.yml
+++ b/mod/area/huegel_n01_o03.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 1}
 Name: 
   type: :cexolocstr
   value: 
-    0: "Das H\xFCgelland_n01_o03"
+    0: "Das H\xFCgelland"
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_hills}
 OnExit: {type: :resref, value: _area_leave}
