add Huegelland - Krypta

--- a/mod/area/huegel_n00_o00.git.yml
+++ b/mod/area/huegel_n00_o00.git.yml
@@ -45,8 +45,8 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: key_abc}
     KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: huegel_crypt0_2_huegel_n00_o00_c}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
@@ -54,7 +54,7 @@ Door List:
       value: 
         0: Stone Door 08k
     Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
     OnDamaged: {type: :resref, value: door_damaged}
@@ -73,7 +73,7 @@ Door List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1013}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: CTP_StoneDoor_08k}
+    Tag: {type: :cexostr, value: huegel_n00_o00_2_huegel_crypt0}
     TemplateResRef: {type: :resref, value: ctp_door_08k}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
