--- a/mod/area/huegel_crypt0.git.yml
+++ b/mod/area/huegel_crypt0.git.yml
@@ -53,8 +53,8 @@ Door List:
       str_ref: 14452
       value: 
         0: Stone Door 08j
-    Lockable: {type: :byte, value: 1}
-    Locked: {type: :byte, value: 1}
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
     OnDamaged: {type: :resref, value: door_damaged}
@@ -91,6 +91,7 @@ Encounter List:
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 7
     Active: {type: :byte, value: 1}
+    Comment: {type: :cexostr, value: ""}
     CreatureList: 
       type: :list
       value: 
@@ -197,6 +198,110 @@ Encounter List:
     TemplateResRef: {type: :resref, value: untote_mittel}
     XPosition: {type: :float, value: 30.823}
     YPosition: {type: :float, value: 67.1}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 186}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: allip}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 172}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: gruftschrecken}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 146}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: schatten}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 76}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: ghast}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 187}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: todesalb}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -2.6143}
+        Y: {type: :float, value: 3.1409}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 3.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.198}
+        Y: {type: :float, value: 0.0113}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -0.105}
+        Y: {type: :float, value: 3.4389}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Untote, mittel
+    MaxCreatures: {type: :int, value: 7}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 4}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 49.7696}
+        Y: {type: :float, value: 32.3288}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 49.6013}
+        Y: {type: :float, value: 60.9155}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 12.5082}
+        Y: {type: :float, value: 39.8192}
+        Z: {type: :float, value: 0.0}
+    Tag: {type: :cexostr, value: Untote_mittel}
+    TemplateResRef: {type: :resref, value: untote_mittel}
+    XPosition: {type: :float, value: 33.0694}
+    YPosition: {type: :float, value: 3.247}
     ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
