Huette Nilith: try to fix wacky sound noises

--- a/mod/area/nilithshia_og.git.yml
+++ b/mod/area/nilithshia_og.git.yml
@@ -5,11 +5,11 @@ AreaProperties:
   type: :struct
   value: !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 100
-    AmbientSndDay: {type: :int, value: 88}
+    AmbientSndDay: {type: :int, value: 0}
     AmbientSndDayVol: {type: :int, value: 54}
-    AmbientSndNight: {type: :int, value: 88}
+    AmbientSndNight: {type: :int, value: 0}
     AmbientSndNitVol: {type: :int, value: 55}
-    EnvAudio: {type: :int, value: 4}
+    EnvAudio: {type: :int, value: 0}
     MusicBattle: {type: :int, value: 0}
     MusicDay: {type: :int, value: 0}
     MusicDelay: {type: :int, value: 88000}
@@ -38,7 +38,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 1}
+    GenericType_New: {type: :dword, value: 1}
     HP: {type: :short, value: 15}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -1128,7 +1128,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 301}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
