--- a/mod/area/area005.git.yml
+++ b/mod/area/area005.git.yml
@@ -5,11 +5,11 @@ AreaProperties:
   type: :struct
   value: !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 100
-    AmbientSndDay: {type: :int, value: 88}
+    AmbientSndDay: {type: :int, value: 0}
     AmbientSndDayVol: {type: :int, value: 54}
-    AmbientSndNight: {type: :int, value: 88}
+    AmbientSndNight: {type: :int, value: 0}
     AmbientSndNitVol: {type: :int, value: 55}
-    EnvAudio: {type: :int, value: 4}
+    EnvAudio: {type: :int, value: 0}
     MusicBattle: {type: :int, value: 0}
     MusicDay: {type: :int, value: 0}
     MusicDelay: {type: :int, value: 88000}
@@ -26,7 +26,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 33}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
@@ -37,7 +37,7 @@ Door List:
     DisarmDC: {type: :byte, value: 0}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 5}
-    GenericType: {type: :byte, value: 9}
+    GenericType_New: {type: :dword, value: 9}
     HP: {type: :short, value: 10}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -1266,7 +1266,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 5}
     Appearance: {type: :dword, value: 264}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2241,7 +2241,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1319}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2556,7 +2556,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1311}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
