Huegel: re-add broken Goldene Lanze

--- a/mod/area/arnw_keelacave.git.yml
+++ b/mod/area/arnw_keelacave.git.yml
@@ -26,7 +26,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 33}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 60}
@@ -3186,7 +3186,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 727}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3210,7 +3210,7 @@ Placeable List:
         AddCost: {type: :dword, value: 1}
         BaseItem: {type: :int, value: 15}
         Charges: {type: :byte, value: 0}
-        Cost: {type: :dword, value: 13}
+        Cost: {type: :dword, value: 14}
         Cursed: {type: :byte, value: 0}
         DescIdentified: 
           type: :cexolocstr
@@ -3322,7 +3322,7 @@ Placeable List:
         AddCost: {type: :dword, value: 1}
         BaseItem: {type: :int, value: 15}
         Charges: {type: :byte, value: 0}
-        Cost: {type: :dword, value: 13}
+        Cost: {type: :dword, value: 14}
         Cursed: {type: :byte, value: 0}
         DescIdentified: 
           type: :cexolocstr
@@ -6976,7 +6976,7 @@ TriggerList:
         PointZ: {type: :float, value: 1.43557727336884}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: WP_arnwald_2_arnw_keelacave}
+    LinkedTo: {type: :cexostr, value: WP_huegel_n00o00_2_keelacave}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -7087,3 +7087,28 @@ WaypointList:
     YOrientation: {type: :float, value: -0.3827}
     YPosition: {type: :float, value: 15.0098}
     ZPosition: {type: :float, value: 1.3177}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_arnw_keelacave_2_arnwald}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 5.3989}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 15.1114}
+    ZPosition: {type: :float, value: 1.4803}
