Huegelland: Leerstehender Turm an n00o01

--- a/mod/area/huegel_n00_o01.git.yml
+++ b/mod/area/huegel_n00_o01.git.yml
@@ -38,20 +38,20 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 28}
-    GenericType_New: {type: :dword, value: 206}
+    GenericType_New: {type: :dword, value: 237}
     HP: {type: :short, value: 20}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: huegel_t0_2_huegel_n00_o01}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
       str_ref: 14453
       value: 
-        0: Strong Door 02a
+        0: Strong Door 20q0
     Lockable: {type: :byte, value: 0}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
@@ -72,8 +72,8 @@ Door List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 600}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: CTP_StrongDoor_02a}
-    TemplateResRef: {type: :resref, value: ctp_door_02a}
+    Tag: {type: :cexostr, value: huegel_n00_o01_2_huegel_t0_}
+    TemplateResRef: {type: :resref, value: ctp_door_20q0}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
     TrapDisarmable: {type: :byte, value: 1}
@@ -81,9 +81,9 @@ Door List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 1}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 36.538}
-    Y: {type: :float, value: 35.31}
-    Z: {type: :float, value: 0.33}
+    X: {type: :float, value: 37.3}
+    Y: {type: :float, value: 34.26}
+    Z: {type: :float, value: -0.1}
 Encounter List: 
   type: :list
   value: []
