--- a/mod/uti/tool_shovel.uti.yml
+++ b/mod/uti/tool_shovel.uti.yml
@@ -5,7 +5,7 @@ AddCost: {type: :dword, value: 120}
 BaseItem: {type: :int, value: 34}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 120}
+Cost: {type: :dword, value: 123}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
@@ -22,11 +22,19 @@ LocalizedName:
     0: "Werkzeug: Schaufel"
 ModelPart1: {type: :byte, value: 5}
 PaletteID: {type: :byte, value: 64}
-Plot: {type: :byte, value: 1}
+Plot: {type: :byte, value: 0}
 PropertiesList: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 0
+    ChanceAppear: {type: :byte, value: 100}
+    CostTable: {type: :byte, value: 3}
+    CostValue: {type: :word, value: 13}
+    Param1: {type: :byte, value: 255}
+    Param1Value: {type: :byte, value: 0}
+    PropertyName: {type: :word, value: 15}
+    Subtype: {type: :word, value: 513}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
 Tag: {type: :cexostr, value: tool_shovel}
