Shovel: Gemischtwaren sells it

--- a/mod/utm/st_gemischt2.utm.yml
+++ b/mod/utm/st_gemischt2.utm.yml
@@ -239,6 +239,12 @@ StoreList:
         InventoryRes: {type: :resref, value: spiegel}
         Repos_PosX: {type: :word, value: 3}
         Repos_Posy: {type: :word, value: 4}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 12
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: tool_shovel}
+        Repos_PosX: {type: :word, value: 5}
+        Repos_Posy: {type: :word, value: 4}
 Tag: {type: :cexostr, value: ST_Gemischt2}
 WillNotBuy: 
   type: :list
